[package]
name = "vssh"
version = "0.1.0"
authors = ["Joshua Gilman <joshuagilman@gmail.com>"]
description = "A small CLI wrapper for authenticating with SSH keys from Hashicorp Vault."
license = "MIT"
readme = "README.md"
repository = "https://github.com/jmgilman/vssh"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.43"
clap = { git = "https://github.com/clap-rs/clap/" }
console = "0.14.1"
dialoguer = "0.8.0"
dirs = "3.0.2"
phf = { version = "0.10.0", features = ["macros"] }
serde = "1.0.130"
shellexpand = "2.1.0"
sshkeys = "0.3.1"
thiserror = "1.0.28"
tokio = { version = "1.10.1", features = ["full"] }
toml = "0.5.8"
vaultrs = { path = "../vaultrs", features = ["oidc"] }
webbrowser = "0.5.5"
